--- a/waterdemo/mapdisplay/templates/index.html
+++ b/waterdemo/mapdisplay/templates/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>MapDisplay</title>
-    </head>
-    <body>
-        <h1>Display map here!!!</h1>
-    </body>
+<head>
+    <meta charset='utf-8' />
+    <title></title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src="{% static 'bower_components/mapbox-gl-js/mapbox-gl.js' %}"></script>
+    <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
+    <link href="{% static 'bower_components/mapbox-gl-js/mapbox-gl.css' %}" rel='stylesheet' />
+    <style>
+        body { margin:0; padding:0; }
+        #map { position:absolute; top:0; bottom:0; width:100%; }
+    </style>
+</head>
+<body>
+
+<style>
+    #menu {
+        position: absolute;
+        background: #fff;
+        padding: 10px;
+        font-family: 'Open Sans', sans-serif;
+    }
+</style>
+
+<div id='map'></div>
+<div id='menu'>
+    <input id='basic' type='radio' name='rtoggle' value='basic' checked='checked'>
+    <label for='basic'>basic</label>
+    <input id='streets' type='radio' name='rtoggle' value='streets'>
+    <label for='streets'>streets</label>
+    <input id='bright' type='radio' name='rtoggle' value='bright'>
+    <label for='bright'>bright</label>
+    <input id='light' type='radio' name='rtoggle' value='light'>
+    <label for='light'>light</label>
+    <input id='dark' type='radio' name='rtoggle' value='dark'>
+    <label for='dark'>dark</label>
+    <input id='satellite' type='radio' name='rtoggle' value='satellite'>
+    <label for='satellite'>satellite</label>
+</div>
+
+<script src="{% static 'src/index.js' %}"></script>
+
+</body>
 </html>
