--- a/waterdemo/mapdisplay/templates/index.html
+++ b/waterdemo/mapdisplay/templates/index.html
@@ -123,51 +123,51 @@
 <div class="stepwizard">
     <div class="stepwizard-row">
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="1985" type="button" class="btn btn-default btn-circle"></button>
             <p>1985</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="1990" type="button" class="btn btn-default btn-circle"></button>
             <p>1990</p>
         </div> 
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="1995" type="button" class="btn btn-default btn-circle"></button>
             <p>1995</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-primary btn-circle" disabled="disabled"></button>
+            <button data-year="2000" type="button" class="btn btn-primary btn-circle" disabled="disabled"></button>
             <p>2000</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="2005" type="button" class="btn btn-default btn-circle"></button>
             <p>2005</p>
         </div> 
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="2010" type="button" class="btn btn-default btn-circle"></button>
             <p>2010</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="2015" type="button" class="btn btn-default btn-circle"></button>
             <p>2015</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="2020" type="button" class="btn btn-default btn-circle"></button>
             <p>2020</p>
         </div> 
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="2025" type="button" class="btn btn-default btn-circle"></button>
             <p>2025</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="2030" type="button" class="btn btn-default btn-circle"></button>
             <p>2030</p>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="2035" type="button" class="btn btn-default btn-circle"></button>
             <p>2035</p>
         </div> 
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-default btn-circle"></button>
+            <button data-year="2040" type="button" class="btn btn-default btn-circle"></button>
             <p>2040</p>
         </div>
     </div>
